# training-analyzer

./: .env.example  .env.nas.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  NAS_SETUP.md  NETWORK_TOPOLOGY.md  PORTS.txt  PROJECT_SUMMARY.md  README.md  START_HERE.md  deploy-from-runner.sh  deploy.sh  docker-compose.coolify.yml  docker-compose.nas.yml  docker-compose.prod.yml  docker-compose.yml  hm_sub2h_plan.yaml  setup-nas.sh  setup-with-free-ports.sh  setup_project.py  start.sh
.ssh/: id_ed25519
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b88ba9d87040_initial_workouts_table.py  c001_add_training_type_columns.py  c002_add_gps_track_columns.py  c003_add_race_goals_table.py  c004_add_exercises_json.py  c005_add_elevation_factor.py  c006_add_exercises_table.py  c007_enrich_exercises_table.py  c008_add_rpe_column.py  c009_add_training_plans.py  c010_add_weekly_plan.py  c011_add_run_details.py  c012_plan_run_details.py  c013_rename_to_session_templates.py  c014_training_plan_system.py  c015_add_weekly_template_to_phases.py  c016_add_plan_id_to_weekly_plan_entries.py  c017_add_weekly_templates_to_phases.py  c018_refactor_training_taxonomy.py  c019_add_edited_to_weekly_plan.py  c020_add_plan_changelog.py  c021_add_category_to_changelog.py  c022_split_day_session.py  c023_add_planned_session_status.py  c024_migrate_strength_notes.py  c025_add_exercises_json.py  c026_ensure_segments_in_run_details.py  c027_add_encrypted_api_keys.py  c028_add_default_set_type.py  c028_add_hr_timeseries_json.py  c029_add_ai_analysis_log.py  c030_generalize_ai_log.py  c031_fix_workout_id_nullable.py  c032_add_ai_recommendations.py  c033_add_weekly_reviews.py  c034_add_original_file_storage.py  c035_add_enrichment_fields.py  c036_add_surface_json.py  c037_backfill_session_start_time.py  c038_add_chat_conversations.py  (+3 more)
backend/app/: main.py
backend/app/api/v1/: ai.py  ai_log.py  athlete.py  exercise_library.py  goals.py  health.py  router.py  session_templates.py  sessions.py  streak.py  strength.py  threshold_tests.py  training_balance.py  training_plans.py  trends.py  user_settings.py  weekly_plan.py  weekly_review.py  workouts.py
backend/app/core/: api_key_resolver.py  config.py  encryption.py
backend/app/domain/entities/: workout.py
backend/app/models/: ai_analysis.py  ai_recommendation.py  athlete.py  category_tonnage.py  chat.py  enrichment.py  exercise.py  exercise_library.py  goal.py  plan_changelog.py  progression.py  seasonal.py  segment.py  session.py  session_template.py  streak.py  strength.py  taxonomy.py  threshold_test.py  training.py  training_balance.py  training_plan.py  trend.py  user_settings.py  weekly_plan.py  weekly_review.py  yaml_validation.py
backend/app/routers/: training.py
backend/app/services/: ai_log_service.py  chat_context_service.py  chat_notifications.py  chat_service.py  chat_tool_handlers.py  chat_tools.py  csv_parser.py  exercise_ai_enrichment.py  exercise_enrichment.py  exercise_sync.py  fit_export.py  fit_parser.py  gps_extractor.py  hr_zone_calculator.py  km_split_calculator.py  parser_interface.py  plan_generator.py  progression_tracker.py  recommendation_service.py  recommendation_to_plan_service.py  segment_matcher.py  session_analysis_service.py  session_enrichment.py  tonnage_calculator.py  training_knowledge.py  training_type_classifier.py  weather_forecast_service.py  weekly_review_service.py  yaml_validator.py
backend/app/tests/: conftest.py  factories.py  test_ai_log_service.py  test_changelog_details.py  test_encryption.py  test_enrichment.py  test_exercise_ai_enrichment.py  test_exercise_enrichment.py  test_exercise_library.py  test_factories.py  test_fit_export.py  test_health.py  test_hr_zones.py  test_km_split_calculator.py  test_plan_generator.py  test_progression.py  test_recommendation_to_plan.py  test_recommendations.py  test_segment.py  test_segment_matcher.py  test_session_analysis.py  test_session_detail.py  test_session_templates.py  test_sessions.py  test_streak.py  test_strength.py  test_threshold_tests.py  test_training_balance.py  test_training_plans.py  test_training_type_classifier.py  test_user_settings.py  test_weekly_plan.py  test_weekly_plan_undo.py  test_weekly_review.py  test_yaml_validator.py
backend/data/: exercise_instructions_de.json
backend/scripts/: translate_exercises.py
backend/static/: template-trainingsplan.yaml
(+303 files in other folders)
